--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -1,13 +1,21 @@
 {% extends "base.html" %}
 
-
 {% block content %}
 
-<h1>Posts</h1>
+
+<!-- Post list display -->
 {% for post in post_list %}
-<h2>{{post.author}}</h2>
-<p><strong>{{post.created_on}}</strong></p>
-<p>{{post.title}}</p>
-<p>{{post.content}}</p>
+<div class="row m-3">
+    <div class="col-6 col-md-4">
+        <p class="mb-0">Posted by <strong>{{post.author}}</strong></p>
+        <p>{{post.created_on}}</p>
+    </div>
+    <div class="col-6 col-md-8">
+        <p><strong>{{ post.title }}</strong></p>
+        <p class="pt-2 pb-2">{{ post.content | safe }}</p>
+    </div>
+</div>
+<hr>
 {% endfor %}
+
 {% endblock %}
