--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,9 @@
 
 
 body {
+    background: url("../images/background_wave.png");
+    background-size: cover;
+    background-repeat: repeat;
     font-family: "Lato",
         sans-serif;
     color: #3a3b3c;
