--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col-6 col-md-8">
         <p><strong>{{ post.title }}</strong></p>
-        <p class="pt-2 pb-2">{{ post.content | safe }}</p>
+        <p class="pt-2 pb-2">{{ post.get_content_preview | safe }}... <small class="text-muted">See more</small></p>
     </div>
 </div>
 <hr>
