Style pagination, style post_detail

--- a/forum/templates/forum/post_detail.html
+++ b/forum/templates/forum/post_detail.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <!-- Individual post -->
-<div class="container">
+<div class="container container-p-detail pt-4">
     <!-- Go back arrow -->
     <a href="{% url 'home' %}" aria-label="go back home" class="ps-4">
         <i class="fa-solid fa-arrow-left"></i>
@@ -12,7 +12,7 @@
         <p class="mb-0">Posted by <strong>{{post.author}}</strong></p>
         <p>{{post.created_on}}</p>
         <p><strong>{{ post.title }}</strong></p>
-        <p>{{ post.content }}</p>
+        <p>{{ post.content | safe }}</p>
         <hr>
     </div>
 </div>
