--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,46 +1,43 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
+{% load static %}
 
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock head_title %}
+{% block head_title %}{% trans "Log in" %}{% endblock head_title %}
 
 {% block content %}
 
-<h1>{% trans "Sign In" %}</h1>
-
-{% get_providers as socialaccount_providers %}
-
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
+<!-- Log in form -->
+<div class="container container-login col-md-6 p-4">
+  <!-- Exit button -->
+  <a href="{% url 'home' %}" aria-label="go back home">
+    <i class="fa-solid fa-xmark float-end"></i>
+  </a>
+  <div class="row">
+    <div class="pt-4">
+      <h4><strong>{% trans "Log in" %}</strong></h4>
+    </div>
+  </div>
+  <div class="row">
+    <div>
+      <form class="login pt-2" method="POST" action="{% url 'account_login' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <div class="mt-4">
+          <p>{% blocktrans %}New to Jurtaka? <a class="link signup-link" href="{{ signup_url }}">Sign
+              up</a>{% endblocktrans %}</p>
+        </div>
+        <div class="d-grid gap-2 col-4 mx-auto pt-5 pb-3"><button class="btn btn-primary center" type="submit">Log
+            in</button>
+        </div>
+    </div>
+    </form>
+  </div>
 </div>
 
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
 
 {% endblock content %}
