Add login message, style login btn and login forms

--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -60,3 +60,19 @@
 {% endif %}
 
 {% endblock %}
+
+<!-- Login message -->
+{% block login_message %}
+
+<div class="row ms-4 pt-3">
+    {% if user.is_authenticated %}
+    <p><strong>Welcome to Jurtaka Hiking Forum! You are logged in as
+            <span class="pink-text">{{ user }}</span></strong></p>
+    {% else %}
+    <p><strong>Welcome to Jurtaka Hiking Forum! You are not logged in. Please <a class="link signup-link"
+                href="{% url 'account_login' %}">log in
+            </a>to post and comment!</strong></p>
+    {% endif %}
+</div>
+
+{% endblock %}
