--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -28,8 +28,8 @@
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
         <div class="mt-4">
-          <p>{% blocktrans %}New to Jurtaka? <a class="link signup-link" href="{{ signup_url }}">Sign
-              up</a>{% endblocktrans %}</p>
+          <p>{% blocktrans %}New to Jurtaka? <a class="link signup-link" href="{{ signup_url }}"><strong>Sign
+                up</strong></a>{% endblocktrans %}</p>
         </div>
         <div class="d-grid gap-2 col-4 mx-auto pt-5 pb-3"><button class="btn btn-primary center" type="submit">Log
             in</button>
