--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -12,8 +12,7 @@ body {
     background: url("../images/background_wave.png");
     background-size: cover;
     background-repeat: repeat;
-    font-family: "Lato",
-        sans-serif;
+    font-family: "Lato", sans-serif;
     color: #3a3b3c;
 }
 
@@ -23,9 +22,63 @@ body {
     background-color: #374955;
 }
 
+.nav-link {
+    color: white;
+}
+
 /* Main -------------------------------------------------------------------> */
 
+.post-link {
+    text-decoration: none;
+}
 
+.container-p-detail,
+.container-login {
+    background-color: white !important;
+    border-radius: 20px;
+}
+
+.btn-primary {
+    background-color: #de245c !important;
+    border-color: #de245c;
+}
+
+.btn-primary:hover {
+    background-color: #bc093f !important;
+    border-color: #bc093f;
+}
+
+/* Login, logout, signup ---------------------------------------------------> */
+
+.signup-link {
+    color: #de245c;
+    text-decoration: none;
+}
+
+.signup-link:hover {
+    text-decoration: underline;
+}
+
+.pink-text {
+    color: #de245c;
+}
+
+/* Pagination -------------------------------------------------------------> */
+
+.pagination>li>a {
+    background-color: white;
+    color: #3a3b3c;
+}
+
+.page-link {
+    color: #3a3b3c !important;
+}
+
+.page-item.active .page-link {
+    background-color: #3a3b3c !important;
+    color: white !important;
+    border-color: #3a3b3c !important;
+}
 
 /* Footer -----------------------------------------------------------------> */
 
