--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jurtaka Hiking Forum</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../static/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-16x16.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-32x32.png' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -38,20 +38,20 @@
                     <!-- Login/logout button -->
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'account_logout' %}">Logout</a>
+                        <a class="btn btn-primary col-4 col-lg-12 nav-link {% if request.path == logout_url %}active{% endif %}"
+                            aria-current="page" href="{% url 'account_logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page"
-                            href="{% url 'account_login' %}">Login</a>
+                        <a class="btn btn-primary col-4 col-lg-12 nav-link {% if request.path == login_url %}active{% endif %}"
+                            aria-current="page" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nav item</a>
+                        <a class="center nav-link" href="#">Nav item</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nav item</a>
+                        <a class="center nav-link" href="#">Nav item</a>
                     </li>
                 </ul>
             </div>
@@ -60,6 +60,9 @@
 
 
     <main class="flex-grow-1 d-flex flex-column container-lg">
+        {% block login_message %}
+        {% endblock %}
+
         {% block content %}
         {% endblock %}
     </main>
